[package]
name = "vulkan_experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bytemuck = "1.20.0"
glam = { version = "0.29.2", features = ["bytemuck"] }
goth-gltf = "0.1.1"
image = "0.25.5"
itertools = "0.13.0"
num = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rodio = "0.20.1"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = "0.28"

[profile.dev]
opt-level = 1
